--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
 streamlit>=1.30.0
-transformers>=4.40.0
-torch>=2.1.0
-datasets>=2.19.0
-scikit-learn>=1.4.0
+torch>=2.0.0
+transformers>=4.36.0
+datasets>=2.16.0
+sentencepiece>=0.1.99
+pandas>=2.0.0
+numpy>=1.24.0
+networkx>=3.0
+matplotlib>=3.7.0
+tqdm>=4.65.0
